headers = [ 'modelParameters.h',
            'globalVariables.h',
            'thermalProcesses.h',
            'injectionNeutrons.h',
            'secondariesProcesses.h',
            'absorption.h',
            'adafFunctions.h',
            'redshiftFunction.h',
            'NTdistribution.h',
            'thermalCompton.h',
            'read.h',
            'State.h',
            'adafParameters.h',
            'distributionNeutrons.h',
            'NTtimescales.h',
            'NTinjection.h',
            'messages.h',
            'write.h',
            'thermalDistribution.h',
            'losses.h',
            'comptonScattMatrix.h',
            'NTradiation.h',
            'blob.h',
            'flareProcesses.h',
            'flareTimeDependent.h',
            'jetEmission.h',
            'maxwellJuttner.h' ] 


sources = [ 'modelParameters.cpp',
            'thermalProcesses.cpp',
            'injectionNeutrons.cpp',
            'secondariesProcesses.cpp',
            'absorption.cpp',
            'adafFunctions.cpp',
            'redshiftFunction.cpp',
            'NTdistribution.cpp',
            'thermalCompton.cpp',
            'read.cpp',
            'State.cpp',
            'adafParameters.cpp',
            'distributionNeutrons.cpp',
            'NTtimescales.cpp',
            'NTinjection.cpp',
            'messages.cpp',
            'write.cpp',
            'thermalDistribution.cpp',
            'main.cpp',
            'losses.cpp',
            'comptonScattMatrix.cpp',
            'NTradiation.cpp',
            'blob.cpp',
            'flareProcesses.cpp',
            'flareTimeDependent.cpp',
            'jetEmission.cpp',
            'maxwellJuttner.cpp' ]

includes = include_directories( ['./', '../lib/', '/usr/include/'] )

exe = executable( 'adaf',
                  cpp_args : [ '-O2',
                               '-fopenmp',
                               '-march=native',
                               '-ffast-math'],
                  sources : sources + headers,
                  dependencies : [ nrMath_dep,
                                   fmath_dep,
                                   fparameters_dep,
                                   inout_dep,
                                   fparticle_dep,
                                   finjection_dep,
                                   flosses_dep,
                                   fluminosities_dep,
                                   omp_dep,
                                   hdf5_dep,
                                   hdf5_cpp_dep ],
                  include_directories : includes )
